Add options support